[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "playtest-triage"
version = "0.1.0"
description = "Triage raw playtest feedback into a structured QA report with the Claude API."
requires-python = ">=3.10"
dependencies = ["anthropic>=0.40"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
playtest-triage = "playtest_triage.cli:main"

[tool.setuptools.packages.find]
include = ["playtest_triage*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
